kubernetes/nagios-nagrestconf.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nagios-nagrestconf
spec:
  replicas: 1

  template:
    metadata:
      labels:
        app: nagrestconf
    spec:
      containers:

      - name: nagios
        image: quantumobject/docker-nagios
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nagios-dir
          mountPath: /usr/local/nagios

      - name: nagrestconf
        image: mclarkson/nagrestconf
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nagios-dir
          mountPath: /usr/local/nagios
        - name: nagrestconf-tmp-dir # tmp dir is shared with nagrestconf-restarter
          mountPath: /tmp

      - name: nagrestconf-nagios-restarter
        image: mclarkson/nagrestconf-restarter
        volumeMounts:
        - name: nagrestconf-tmp-dir # restarter looks for file written by nagrestconf in /tmp
          mountPath: /tmp
        - name: nagios-dir # just for nagios socket
          mountPath: /usr/local/nagios

      volumes:
      - name: nagios-dir
        emptyDir: {}
      - name: nagrestconf-tmp-dir
        emptyDir: {}
