kubernetes/nagrestconf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nagrestconf
  labels:
    app: nagrestconf
spec:
#  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nagrestconf
